Fix layer metadata parsing

BUG: 452155